# goit-pyweb-hw-09

./: .gitignore  main.py  pyproject.toml  seed.py
